fix(Header): added gap

--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -1,6 +1,7 @@
 .headerContainer {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
+  gap: 1rem;
 }
 
 .leftSlot {
